[tool.poetry]
name = "twason"
version = "1.0.0"
description = "The KISS Twitch bot"
authors = ["Jérôme Deuchnord <jerome@deuchnord.fr>"]
license = "AGPL-3.0-or-later"

[tool.poetry.scripts]
twason = 'twason.__main__:main'

[tool.poetry.dependencies]
python = "^3.12"
irc3 = "^1.1"
urlextract = "^1.9"

[tool.poetry.group.dev.dependencies]
black = "^25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
